# ffmpeg_decoder_265

./: CMakeLists.txt  LICENSE  README.md  build_decoder_queue_wasm.sh  build_ffmpeg_wasm.sh  build_test_decoder_wasm.sh  build_test_wasm.sh  common.h  decoder.drawio  my_queue.c  test_decoder.c  test_decoder.cpp  test_decoder_queue.c  test_transcode.cpp  wasmvideoplayer.cpp
decoder_js/: libffmpeg_265_queue.js  libffmpeg_265_queue.wasm
ffmpeg_wasm/include/libavutil/: ffversion.h
ffmpeg_wasm/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswscale.pc
